testing/macro-tests/tests/ui/generated_unsupported_path.stderr
error: generated(insert = ...) currently supports only Ulid::generate or Timestamp::now
  --> tests/ui/generated_unsupported_path.rs:24:21
   |
24 |             ident = "token",
   |                     ^^^^^^^
